Fix nav alignment, add body content and base layout.

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ header {
   width: 100%;
   height: 80px;
   z-index: 1;
+  background-color: white;
 }
 
 .logo{
@@ -16,6 +17,7 @@ header {
   color: MediumAquamarine;
   padding-left: 30px;
   align-items: center;
+  flex-grow: 1;
 }
 
 .logo img{
@@ -36,4 +38,71 @@ nav span{
 
 a {
   color: black;
+}
+
+
+div{
+  border: 1px solid black;
+}
+
+.content{
+  display: flex;
+  width: 1232px;
+  margin: 0 auto 78px auto;
+  padding-top: 116px;
+}
+
+.column{
+  display: flex;
+  flex-direction: column;
+  border: 1px solid black;
+  margin-right: 32px;
+}
+
+.column.large{
+  width: 630px;
+}
+
+.column.medium {
+  width: 300px;
+}
+
+.column.small {
+  width: 240px;
+}
+
+.leadstory{
+  display: block;
+  background-image: url('./img-story-main.png');
+  width: 630px;
+  font-size: 40px;
+  text-align: left;
+  color: white;
+}
+.imgcontent{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  font-family: Georgia;
+  font-weight: bold;
+  font-size: 30px;
+  color: white;
+  height: 300px;
+  margin-top: 15px;
+}
+
+.cat{
+  background-image: url('./img-story-1.png');
+}
+
+.earth{
+  background-image: url('./img-story-2.png');
+}
+
+.research{
+  background-image: url('./img-story-3.png');
+}
+
+.story{
+  height:250px;
 }
